changes pushed to repo

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+.mediumFont{
+    font-weight: 700;
+}
+
+.bigFont{
+    font-weight: 800;
+}
+
+.leftAlign{
+    float:left;
+}
+
+.centerAlign{
+    text-align: center;
+}
